Fixed prblem in Navbar's SVG on Firefox

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -80,6 +80,7 @@
 .nav-link img {
     min-width: 2rem;
     margin: 0 1.5rem;
+    max-width: 2rem;
 }
 
 .logo {
